Responsive_Design_Done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <main class="main">
     <div class="image-container">
-      <img src="assets\images\image-omelette.jpeg" width="600"/>
+      <img src="assets\images\image-omelette.jpeg" alt="Omelette image"/>
     </div>
 
       <div class=" section first-section">
